@@ -6,6 +6,7 @@ DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.10.0.patch1 3568
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v6r2-for-3.12.0.patch1 35687 SHA256 6e22d0bad22b9215f478759f8a0de920b37bd149de31db6b638612e6f50c85e1 SHA512 c0ebf1ac63307e75742ca2d8a2523ce56694629eec1da5a1f4fe884a78bd330a98b45e6a17d6764470de3af48f94d3866d14a83f8cf58de7746b4165a674a68a WHIRLPOOL 06d9b9c9e759635ba182d01d62e08e93c48f05dd3cc66a165194ea9408b851d89a1a6afe8b4c240b0bd9634dfe975956c870a39bfc8285dc426809c5747105fb
 DIST README-3.10.19.BFQ 10454 SHA256 76b613f067b4e784333ab5e1b0999aa40aeaad37230ea6e640d48073cbea3457 SHA512 fcd085ab4c356a25e738625ed19d50a375a30c8c4bd8bac4c5d58231957d3b9b66cb5e143be039a216ec223c0f3f2f1f3edf049e6a48aaf6c85bf97958792bf8 WHIRLPOOL fda44f2e0ac6b029028349935d7a8ceb14948df1d0cc05fcf47f9c382c5289899516c3b516caf7e452ad54c67a1bbe0c9d733391bdee4800e54c59b67cde9584
 DIST README-3.12.0.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
+DIST README-3.12.1.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST aufs-sources-3.10_p20131111.tar.xz 151456 SHA256 a5229c12e9cf62a04bc84458df88d4fdb3c4e30e38c184cd2e236b22efe01e6f SHA512 421ac913b40c66dab4ca01da1c08204d1ed78a93e4dba09795f0a081a1af5c30bd82863fafdd034defb840b7961e49713242549c2bbe4d8bddc4c81663b27ff0 WHIRLPOOL c215c4ca78409efe48dea1cae373b645452d16ee8711a00913b52c4796756e90960e3d4a61c0a2b1ddf693aee3e206401f6bf648f0d5af0404cda710ee3d8339
 DIST aufs-sources-3.12_p20131111.tar.xz 152124 SHA256 010b330230b3ce63a4b60b5f049fd3a225518891fce4ac2e4fbd73a02b15a271 SHA512 b34f1d9489748e82d6023ce4b89b87ed7fb4e3b62b99895424f00c241efdc24ff8ccc398ad0558933960fb0c68a61d2bd648d867e95a1ef9617119976422b2e1 WHIRLPOOL db938d8f50d8a5ecd60ddd26422ad851c0d22593b06d113057dec13df30bdb737d00bee888b86cf3c90673301355b6323d7368c7a195ac173be46b2f3411acf7
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
@@ -16,6 +17,8 @@ DIST genpatches-3.10-27.base.tar.xz 371728 SHA256 decbec2608ede58f591a4983d117aa
 DIST genpatches-3.10-27.extras.tar.xz 17764 SHA256 1440283897da3e6bed3c80a723cfed9b43385b0fccc346d142281d87690c78da SHA512 d8643d432f083d6fc7aefb81b43bb6f90fbb48d50dd6f1bd03d8ca516d57f27ec9144fda36d03040c2e47af38a7cb9f6aef47990585b4257a767e5399075058d WHIRLPOOL 119b5cdf27de2e250d1b256821e5b2e3f362642d43710034971c343738b219891795ed938869144ce96b1860680fdabd7d6840ac27d98798274bcd6b7b50150a
 DIST genpatches-3.12-1.base.tar.xz 8084 SHA256 c93fa9908e43601549ae5e959f74934fa408c929532f3aba2c9cf6af0f02da79 SHA512 7542d5b1c102320648a536152f1b02085c3a2ea450dd346c5aa12e1dfff09e56095c0ca797cf539c35ac6c7e4f901dff3b99523fa67e015383021a6ceff2e255 WHIRLPOOL ce6144dd9a4b0dfb2ef55bfab7f3e09f98441a6e9216c5000a0e0e1f3be95e2fd8515e7866eb79608dad6bc5b0a51c28a44e5b363400c391aba5778e92b77551
 DIST genpatches-3.12-1.extras.tar.xz 18152 SHA256 976f1955368e5bac0bfefe97fc6fc53a67ad003da86c22a0eef8860fc8439909 SHA512 edb22af4c538cd02fc4d43cfe5d2eff887a2ba636c50428c2794722cf02fea3bf22b251ddb81da7d2a934331b4d0231fdeb68fd15e6556bf93cc5d743fbdc923 WHIRLPOOL 6dc333619fb6e70f760adab02c820c58295d3d55f6d60252183f3b979d5cffe78fab04f671dbdada6e1134decfefa8440b28def7ca1a68fc2e9fca41db2a329c
+DIST genpatches-3.12-2.base.tar.xz 14008 SHA256 11b01166f5277c26cd611408597e52e7631ee0829c451bc85d3a5a92dd91976b SHA512 4f58df53cef6c00dfb65764b1d2bb857f77b30286f4c46d8ba105f6c78494cd5b8a62423293a37c198ab53bf6584df925e3b5d4ea18e60480d50d5bedf98a4c4 WHIRLPOOL c897b7ee6878d6aff51ff0ce8a88df63b62b451bab4871365cd2f1147b3911a822fedc29e1f3899b11d13307bcf3f839bbadb09b1f1b27e06b19ee731fe8bf64
+DIST genpatches-3.12-2.extras.tar.xz 18152 SHA256 976f1955368e5bac0bfefe97fc6fc53a67ad003da86c22a0eef8860fc8439909 SHA512 edb22af4c538cd02fc4d43cfe5d2eff887a2ba636c50428c2794722cf02fea3bf22b251ddb81da7d2a934331b4d0231fdeb68fd15e6556bf93cc5d743fbdc923 WHIRLPOOL 6dc333619fb6e70f760adab02c820c58295d3d55f6d60252183f3b979d5cffe78fab04f671dbdada6e1134decfefa8440b28def7ca1a68fc2e9fca41db2a329c
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-312-gcc48-1.patch 14066 SHA256 46c2f360ad3dd54648d81b69c438ec5a0f1b4bd2b873250f61a41fc01c1835fb SHA512 577132b6354ad385449316de045368f9ef3cc3129fc112fa41b869d328a0fe312dd956f674eced52459fb36e4f18087b03dddeb9572a2f7479cb858d0df37a6b WHIRLPOOL 7921e37cc602b6240b6c7587e4d90f934e320159eadb99c8974154a634c548a789ddd6e4b7abd7fdbb9bd85b82fda8efcf32023c732bf08d70f649cef5a12057
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
