@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.12.1 (21 Nov 2013)
+
+  21 Nov 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.1.ebuild:
+  Bump to latest genpatches and linux releases
+
   19 Nov 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.10.19.ebuild,
   lh-sources-3.12.0.ebuild:
   Update logo
